--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "flowbite": "^2.2.1",
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
